# NuqtahPos

./: .env.example  .gitignore  README.md  build-desktop.bat  docker-compose.yml  setup.sh
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  FIXES.md  README.md  _ide_helper.php  composer.json  docker-compose.yml  package-lock.json  package.json  phpstan.neon  phpunit.xml  pint.json  pos_test  rector.php
backend/.github/workflows/: cd.yml  ci.yml  tests.yml
backend/app/: helpers.php
backend/bootstrap/: app.php  providers.php
backend/config/: app.php  backup.php  cache.php  cors.php  database.php  eta.php  horizon.php  hr.php  logging.php  permission.php  promotions.php  scribe.php  security.php  sentry.php  services.php  session.php  tenancy.php  thermal-printing.php  whatsapp.php  zatca.php
backend/docker/: supervisord.conf
backend/docs/: API.md  application-analysis.md
backend/lang/: _language_files.php
backend/public/: .htaccess  index.php  site.webmanifest  sw.js
backend/routes/: _api_additions.php  api.php  console.php  web.php
backend/tests/: TestCase.php
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_initial.sql
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: .env.desktop  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: .htaccess
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
(+693 files in other folders)
